# algorep

./: .gitignore  CMakeLists.txt  README  README.txt
doc/: Doxyfile  Doxyfile.bak  change-doc.txt  dev-doc.txt  doc.tex
doc/graph/: client.graphml  messenger.graphml  node.graphml  receiver.graphml
etc/: .#todo.org  config.json  default.json  published-port.txt  repl-msg.txt  todo.org  urifile
etc/client/00/: command.txt  repl.txt
etc/script/: client-repl.sh  cross-compile.sh  gen-build.sh  gen-commands.sh  launch-clients-no-dep.sh  launch-clients.sh  launch-server-no-dep.sh  launch-server.sh  repl.sh  server-repl.sh  ssh-mount.sh  stat-leaks.sh
etc/server/: repl.txt
src/: client-main.cc  client.cc  consensus-manager.cc  consensus.cc  leader-election.cc  log-file-manager.cc  message-info.cc  message-receiver.cc  message.cc  messenger.cc  node.cc  receiver-manager.cc  server-main.cc  server.cc  shutdown-client-main.cc
src/include/: client-receiver.hh  client.hh  consensus-manager.hh  consensus.hh  election-manager.hh  fail-receiver.hh  leader-election.hh  log-file-manager.hh  message-codes.hh  message-handler.hh  message-info.hh  message-receiver.hh  message.hh  message.hxx  messenger.hh  messenger.hxx  node.hh  receiver-manager.hh  receiver-manager.hxx
src/include/manager/: client-manager.hh  consensus-manager.hh  election-manager.hh  failure-manager.hh  repl-manager.hh
src/include/receiver/: client-receiver.hh  consensus-receiver.hh  election-receiver.hh  fail-receiver.hh  message-receiver.hh  receiver-manager.hh  repl-receiver.hh
src/manager/: client-manager.cc  consensus-manager.cc  election-manager.cc  failure-manager.cc  repl-manager.cc
src/receiver/: client-receiver.cc  consensus-receiver.cc  election-receiver.cc  fail-receiver.cc  message-receiver.cc  receiver-manager.cc  repl-receiver.cc
test/: CMakeLists.txt
test/template-test/: CMakeLists.txt  template.cc
